--- a/resources/pod/pod.yaml
+++ b/resources/pod/pod.yaml
@@ -7,13 +7,17 @@ spec:
     - name: jnlp
       image: "jenkins/inbound-agent:latest"
       workingDir: "/home/jenkins/agent"
-    - name: docker
-      image: "docker:27.3.1-dind-alpine3.20"
       volumeMounts:
         - name: "workspace"
           readOnly: false
-          mountPath: /home/jenkins/agent
+          mountPath: "/home/jenkins/agent"
+    - name: docker
+      image: "docker:27.3.1-dind-alpine3.20"
       workingDir: "/home/jenkins/agent"
+      volumeMounts:
+        - name: "workspace"
+          readOnly: false
+          mountPath: "/home/jenkins/agent"
       securityContext:
         privileged: true
   volumes:
