--- a/resources/pod/pod.yaml
+++ b/resources/pod/pod.yaml
@@ -6,11 +6,11 @@ spec:
   containers:
     - name: jnlp
       image: "jenkins/inbound-agent:latest"
-#      workingDir: "/home/jenkins/agent"
-#      volumeMounts:
-#        - name: "workspace"
-#          readOnly: false
-#          mountPath: "/home/jenkins/agent"
+      workingDir: "/home/jenkins/agent"
+      volumeMounts:
+        - name: "workspace"
+          readOnly: false
+          mountPath: "/home/jenkins/agent"
 #    - name: docker
 #      image: "docker:27.3.1-dind-alpine3.20"
 #      workingDir: "/home/jenkins/agent"
@@ -20,7 +20,7 @@ spec:
 #          mountPath: "/home/jenkins/agent"
 #      securityContext:
 #        privileged: true
-#  volumes:
-#    - name: "workspace"
-#      persistentVolumeClaim:
-#        claimName: "jenkins-home-data"
+  volumes:
+    - name: "workspace"
+      persistentVolumeClaim:
+        claimName: "jenkins-home-data"
