+ 增加存储测试pod

--- a/resources/pod/pod.yaml
+++ b/resources/pod/pod.yaml
@@ -11,15 +11,15 @@ spec:
         - name: "workspace"
           readOnly: false
           mountPath: "/home/jenkins/agent"
-#    - name: docker
-#      image: "docker:27.3.1-dind-alpine3.20"
-#      workingDir: "/home/jenkins/agent"
-#      volumeMounts:
-#        - name: "workspace"
-#          readOnly: false
-#          mountPath: "/home/jenkins/agent"
-#      securityContext:
-#        privileged: true
+    - name: docker
+      image: "docker:27.3.1-dind-alpine3.20"
+      workingDir: "/home/jenkins/agent"
+      volumeMounts:
+        - name: "workspace"
+          readOnly: false
+          mountPath: "/home/jenkins/agent"
+      securityContext:
+        privileged: true
   volumes:
     - name: "workspace"
       persistentVolumeClaim:
