+ 增加存储测试pod

--- a/resources/pod/pod.yaml
+++ b/resources/pod/pod.yaml
@@ -20,6 +20,7 @@ spec:
           mountPath: "/home/jenkins/agent"
       securityContext:
         privileged: true
+      tty: true
   volumes:
     - name: "workspace"
       persistentVolumeClaim:
