+ 增加存储测试pod

--- a/resources/pod/pod.yaml
+++ b/resources/pod/pod.yaml
@@ -7,6 +7,7 @@ spec:
     - name: jnlp
       image: "jenkins/inbound-agent:latest"
       workingDir: "/home/jenkins/agent"
+      tty: true
       volumeMounts:
         - name: "workspace"
           readOnly: false
