--- a/resources/pod/pod.yaml
+++ b/resources/pod/pod.yaml
@@ -13,7 +13,7 @@ spec:
           readOnly: false
           mountPath: "/home/jenkins/agent"
     - name: docker
-      image: "docker:27.3.1-dind-alpine3.20"
+      image: "docker:27.3.1-dind"
       workingDir: "/home/jenkins/agent"
       volumeMounts:
         - name: "workspace"
